Fix Bug and update Payment Controller